Projet GL/Projet_GL/src/test/deca/context/valid/increment2/float-equals-minus-float.deca
//Resulats : -4.7

//Historique : cree le 09/01/2023

{
    float a,b;

    a = 4.7;
    b = -a;

    println(b);
}