Projet GL/Projet_GL/src/test/deca/context/invalid/increment7/cast-float-to-bool.deca
//Rule : 3.39

//Resultats : can't cast a float into a boolean

// Historique : cree le 09/01/2023


{
    float a = 2;
    boolean b;

    //Must be refused
    b = (boolean) a;
}